# Classic-Algorithm-Beyond-Classic

./: .gitignore  DEVELOPMENT_ROADMAP.md  README.md  jupytext.toml  pyproject.toml
docs/: execution_log.md  future_roadmap.md  markdown_file_index.md  math_overview.md  notebook_acceptance_guide.md  project_philosophy.md  qa_proxy_notes.md  visualization_guide.md
notebooks/: 01_dp_softdp_qa_layered_path.ipynb
notebooks/paired/: 01_dp_softdp_qa_layered_path.py
src/pathspace_lab/: __init__.py
src/pathspace_lab/math/: __init__.py  observables.py
src/pathspace_lab/problems/: __init__.py  base.py  layered_dag.py
src/pathspace_lab/solvers/: __init__.py  hard_dp.py  soft_dp.py
src/pathspace_lab/utils/: __init__.py  typing.py
tests/: test_hard_dp.py  test_import_package.py  test_layered_dag.py  test_observables.py  test_problem_base.py  test_soft_dp.py  test_typing.py
