[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathspace-lab"
version = "0.1.0"
description = "Visual comparison of DP, Soft-DP, and feasible-subspace quantum annealing on path-DP problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "networkx",
  "matplotlib",
  "ipywidgets",
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "jupytext",
  "nbconvert",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]